# XAlgoNexus---Pro

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  entrypoint.sh  requirements.txt  run.bat  ticks.csv  ticks_eurusd.csv  ticks_gbpusd.csv  vcpkg.json
dashboards/: XAlgoNexus_Grafana_Dashboard.json
data/: GBPUSD_ticks.csv  ticks_eurgbp.csv  ticks_gbpusd.csv
infra/: docker-compose.yml  timescaledb_schema.sql  timescaledb_schema_patch_only.sql
infra/docker/: Dockerfile
infra/monitoring/: grafana-datasource.yaml  grafana_dashboard.json  prometheus.yml
ml_model/: generate_dummy_model.py  prepare_training_data.py  random_forest_model.pkl  train_random_forest.py  train_rule_based_rf_model.py
src/: main.cpp
src/core/: CMakeLists.txt
src/core/common/: EventQueue.hpp  ReplayMode.hpp
src/core/execution/: ExecutionEngine.cpp  ExecutionEngine.hpp  execution_engine.py  pnl_tracker.py  signal_to_execution_test.py
src/core/filters/: VolatilityEstimator.cpp  VolatilityEstimator.hpp  kalman_spread_estimator.py  ml_filter.py
src/core/ingest/: ForexReplayIngestor.cpp  ForexReplayIngestor.hpp  HistoricalReplayIngestor.cpp  HistoricalReplayIngestor.hpp
src/core/ingestion/: ForexReplayIngestor.cpp  ForexReplayIngestor.hpp
src/core/logger/: TradeLogger.cpp  TradeLogger.hpp
src/core/messaging/: HistoricalReplayIngestor.cpp  HistoricalReplayIngestor.hpp  MarketEvent.hpp  MessageBus.cpp  MessageBus.hpp  Tick.hpp
src/core/monitoring/: LiveStatus.py
src/core/preprocess/: ForexTick.hpp  Tick.hpp  TickPreprocessor.cpp  TickPreprocessor.hpp
src/core/risk/: RiskEngine.cpp  RiskEngine.hpp  RiskManagerThread.cpp  RiskManagerThread.hpp
src/core/signal/: SignalGenerator.cpp  SignalGenerator.hpp  TradeSignal.hpp  signal_engine.py  signal_engine_test.py
src/core/signal/MLFilters/: EWMAFilter.cpp  EWMAFilter.hpp  EntropyFilter.cpp  EntropyFilter.hpp  KalmanFilter.cpp  KalmanFilter.hpp
src/core/spread/: SpreadEngine.cpp  SpreadEngine.hpp  VolatilityEstimator.cpp  VolatilityEstimator.hpp
src/data_pipeline/: binance_ingestor.py  coinbase_ingestor.py  data_normalizer.py  timescaledb_adapter.py
src/execution_layer/: execution_router.py
src/feature_engineering/: feature_engineer.py  test_feature_engineer.py
src/filters/: kalman_spread_estimator.py  ml_filter.py
src/main/: live_controller.py
src/messaging/: market_event.py  message_bus.py
src/metrics/: metrics.py
src/risk_manager/: risk_manager.py
src/strategy_core/: signal_generator.py
tests/: CMakeLists.txt
tests/unit/spread/: test_SpreadEngine.cpp
wheels-linux/: greenlet-3.2.1-cp311-cp311-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl
